    * Distribute Game for Steam on Windows or Linux options, which add the
      libraries needed for Steam achievements [Ralph]
    * Distribute Game submenu to Customize Package Contents [Ralph]
    * As you hold down Left/Right keys while editing a value the rate of change
      accelerates. Release it for a moment to slow down [Ralph]

   * New Plotscripting Features
    * "dir X", "dir Y" [Ralph]
    * "heal party" (acts like an inn) [Ralph]
    * "set hero auto battle", "get hero auto battle" [James]
    * "break" and "continue" take an argument for the number of loops to break
      out of, for 15 years already, but it wasn't documented [Ralph]
    * When a slice command shows an error you can jump to the slice in the slice
      debugger/editor [Ralph]
    * "get/set turn based battle mode" and "get/set active time battle mode"
      [James]
    * NPC, slice, zone and menu item extra data are now variable length arrays
      defaulting to length 3. Maximum length is 5,000,000.
      * The slice & zone editors allow resizing the extra data; the menu editor
        remains limited to 3 extra data.
      * "resize extra", "extra length", "append extra", as well as "get extra"
        and "set extra" alternatives to "get/set slice/zone/... extra". These can
        be used with any NPC reference/slice/zone/menu item handle.
      * "get zone" command returns a zone handle.
      * You can use Python-style negative indexing to read from the back of
        the extra array: "get extra(sl, -1)" is the last value, -2 is the second
        last, etc. Works with all extra data commands.
      [Ralph]
    * "lookup next slice", "next slice in tree" [Ralph]
    * "window is focused" [Ralph]
    * "show value" can now show multiple values. Added "show values" as an alias.
      Added "show value of", a cross between "show value" and "trace value" that
      shows expressions. Added "trace value of" as an alias to "trace value".
      [Ralph]