@@ -93,6 +93,8 @@ WHAT IS NEW?
     * Distribute Game submenu to Customize Package Contents [Ralph]
     * As you hold down Left/Right keys while editing a value the rate of change
       accelerates. Release it for a moment to slow down [Ralph]
+    * .gifs recorded while running in 24-bit color depth are smaller, smoother
+      (dithered) and flicker less [Ralph]
 
    * New Plotscripting Features
     * "dir X", "dir Y" [Ralph]
